--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ include_directories(${CMAKE_SOURCE_DIR}/libs/include) # Adiciona o diretório 'l
 
 add_executable(${PROJECT_NAME}  
         ATIVIDADE-07.c # Código principal em C
+        libs/src/ssd1306.c # Biblioteca do display
         )
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR})  # Adiciona o diretório raiz como include privado apenas para o target atual
@@ -37,6 +38,7 @@ target_link_libraries(${PROJECT_NAME}
         pico_stdlib
         FreeRTOS-Kernel 
         FreeRTOS-Kernel-Heap4
+        hardware_i2c
         )
 
 pico_enable_stdio_usb(${PROJECT_NAME} 1)
